[package]
name = "zero2bees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib] 
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2bees"

[dependencies]
axum = "0.4.7"
tokio = {version = "1.0", features = ["full"]}
reqwest = "0.11"
hyper = "*"
serde = {version = "1.0", features = ["derive"]}
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
log = "0.4.0"


# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
