[package]
name = "zero2bees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib] 
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2bees"

[dependencies]
axum = "0.4.7"
tokio = {version = "1.0", features = ["full"]}
hyper = "*"
serde = {version = "1.0", features = ["derive"]}
config = "0.11"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = {version= "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower-http = { version = "0.2.0", features = ["fs", "trace"] }
tracing-bunyan-formatter = "0.3"
tracing-log= "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tower-request-id = {version = "0.1"}

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
